# ch-testing-cdk

./: README.md  pyproject.toml
src/: stack.py
tests/: conftest.py
tests/infra/: test_fine_grained.py  test_fine_grained_matcher.py  test_logical_id.py  test_resource_count.py  test_snapshot.py
tests/infra/__snapshots__/: test_snapshot.ambr
